--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.365.0",
     "axios": "^0.18.0",
     "vue": "^2.5.17",
+    "vue-progressive-image": "^3.2.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
