--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "aws-sdk": "^2.365.0",
     "axios": "^0.18.0",
     "vue": "^2.5.17",
+    "vue-lazy-image-loading": "^1.1.5",
+    "vue-lazyload": "^1.2.6",
     "vue-progressive-image": "^3.2.0",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.13.0",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
   },
