--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "deploy": "aws s3 sync ./dist s3://bnerra.com"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.10",
+    "@fortawesome/free-brands-svg-icons": "^5.6.1",
+    "@fortawesome/free-regular-svg-icons": "^5.6.1",
+    "@fortawesome/free-solid-svg-icons": "^5.6.1",
+    "@fortawesome/vue-fontawesome": "^0.1.3",
     "aws-sdk": "^2.365.0",
     "axios": "^0.18.0",
+    "material-icons": "^0.2.3",
     "vue": "^2.5.17",
     "vue-lazy-image-loading": "^1.1.5",
     "vue-lazyload": "^1.2.6",
+    "vue-material-design-icons": "^2.4.0",
     "vue-progressive-image": "^3.2.0",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.13.0",
@@ -27,6 +34,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "material-design-icons-iconfont": "^4.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.4.6",
