--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk": "^2.365.0",
     "axios": "^0.18.0",
     "material-icons": "^0.2.3",
+    "timeline-vuejs": "^1.0.3",
     "vue": "^2.5.17",
     "vue-lazy-image-loading": "^1.1.5",
     "vue-lazyload": "^1.2.6",
@@ -35,6 +36,8 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "material-design-icons-iconfont": "^4.0.3",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.4.6",
